DP_View objects support setting of HTML attributes through constructor or by directly accessing the attribute. DP_View_Pager displays single page numbers instead of record ranges. DP_View_RowIterator respects width and alignment attributes. Corrected sizes of columns on companies list. Added DP_View_Cell_ArrayItem for table rows which return a key or array index which should be used with an array.

--- a/dotproject3/www/css/default/main.css
+++ b/dotproject3/www/css/default/main.css
@@ -115,6 +115,21 @@ bordertable {
 	/*height: 12pt; Select boxes are too small in Mozilla */
 }
 
+input{
+	border: 1px black solid;
+	font-family: Osaka,verdana,Sans-Serif;
+	font-size: 8pt;
+	margin: 1px 1px 1px 1px;
+	/*height: 12pt; Select boxes are too small in Mozilla */
+}
+
+select{
+	border: 1px black solid;
+	font-family: Osaka,verdana,Sans-Serif;
+	font-size: 8pt;
+	/*height: 12pt; Select boxes are too small in Mozilla */
+}	
+
 TEXTAREA {
 	font-family: Osaka,verdana,helvetica,arial,sans-serif;
 	font-size: 9pt;
@@ -196,6 +211,24 @@ TD.nav {
 }
 
 /* tbl Standard table 'spreadsheet' style */
+table.dp-view-list {
+	background: #a5cbf7;
+}
+
+table.dp-view-list TH {
+	background-color: #08245b;
+	color: #ffffff;
+	list-style-type: disc;
+	list-style-position: inside;
+	border: outset #D1D1CD 1px;
+	font-weight: normal;
+	text-align:center;
+}
+
+table.dp-view-list td {
+	background-color: #ffffff;
+}
+
 table.tbl{
 	background: #a5cbf7;
 }
